# bazel-learn

./: .gitignore  BUILD.bazel  WORKSPACE.bazel
pyprojects/ProjectA/: BUILD.bazel  main.py
pyprojects/calc/: BUILD.bazel  calc.py
src/: go.mod  go.sum
src/bookstore/: BUILD.bazel  main.go
src/bookstore/repository/: BUILD.bazel  bookstore_repository.go
src/pyprojects/ProjectA/: BUILD.bazel
src/pyprojects/calc/: BUILD.bazel  calc_test.py
