load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

# gazelle:prefix github.com/kriscfoster/multi-language-bazel-monorepo
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=src/go.mod",
        "-to_macro=third_party/automatic_repos.bzl%go_repositories",
        "-build_file_proto_mode=disable",
        "-build_extra_args=-go_naming_convention_external=go_default_library",
        "-prune",
    ],
    command = "update-repos",
)
