load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/example/project
# gazelle:build_file_name BUILD,BUILD.bazel

go_binary(
    name = "bookstore",
    embed = [":project_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "project_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project",
    visibility = ["//visibility:private"],
    deps = [
        "//bookstore/repository:bookstore_repository",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)
