load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/example/project
# gazelle:build_file_name BUILD,BUILD.bazel

go_library(
    name = "bookstore_repository",
    srcs = ["bookstore_repository.go"],
    importpath = "github.com/rishabhgpt/projects/bookstore/repository",
    visibility = ["//visibility:public"],
)

go_library(
    name = "project",
    srcs = ["bookstore_repository.go"],
    importpath = "github.com/example/project",
    visibility = ["//visibility:public"],
)
